commit about information

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ab <span class="text-primary">du</span>llah</h3>
             <ul>
@@ -19,8 +19,47 @@
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
+    
+        <div class="banner">
+            <div class="banner-content">
+            <h3 class="banner-greeting"> Hi, I am</h3>
+            <h1 class="banner-title">Abdullah</h1>
+            <p class="banner description">My name is Abdullah.Iam a student of CSE in united <br> international university</p>
+         <button class="btn-primary">Download CV</button>  
+         <button class="btn-primary">Contact</button>          
+        </div>
+        <img class="profile-picture" src="images/abdullah.jpg" alt="">
+    </div>
         <main>
+<section class="about">
+    <h3 class="section-title">About Me</h3>
+    <p class="section-description">
+        I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+    </p>
+    <div class="about-info-container">
+        <!-- .about-info*4>h4.info-title+p.info-description -->
+    
+        <div class="about-info">
+            <h4 class="info-title"> Name:</h4>
+            <p class="info-description"> Abdullah</p>
+        </div>
+        <div class="about-info">
+            <h4 class="info-title"> Email:</h4>
+            <p class="info-description">alraihan1300@gmail.com</p>
+        </div>
+        <div class="about-info">
+            <h4 class="info-title">Date of birth</h4>
+            <p class="info-description"> 06-05-1999</p>
+        </div>
+        <div class="about-info">
+            <h4 class="info-title">From:</h4>
+            <p class="info-description">Dhaka,Bangladesh</p>
+        </div>
+        </div>
 
+    </div>
+
+</section>
         </main>
         <footer>
 
