--- a/index.html
+++ b/index.html
@@ -60,6 +60,97 @@
     </div>
 
 </section>
+<!-- what i do section start -->
+<section>
+    <h3 class="section-title">What i do</h3>
+    <p id="what-i-do-description" class="section-description">
+        I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+    </p>
+    <div class="class skillls-container">
+        <div class="skill">
+            <img src="images/icons/js.png" alt="">
+            <h3 class="skill-title">vanilla Javascript</h3>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/react.png" alt="">
+            <h3 class="skill-title">React</h3>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/nodejs.png" alt="">
+            <h3 class="skill-title">Node.js</h3>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/mongo.png" alt="">
+            <h3 class="skill-title">MongoDB</h3>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+    </div>
+</section>
+<section>
+    <h3 class="section-title">A summary of my Resume</h3>
+
+    <div class="resume-container">
+       <!-- resume.column*2>h3.resume-column-title -->
+       <div class="resume-column">
+        <h3 class="resume-column-title">My Education</h3>
+        <div class="resume-item">
+            <h2 class="resume-item-title">BSCSE</h2>
+                <h3 class="resume-item-institute">United International University / 2019-2023</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+        </div>
+        <hr>
+        <div class="resume-item">
+            <h2 class="resume-item-title">BSCSE</h2>
+                <h3 class="resume-item-institute">United International University / 2019-2023</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+        </div>
+        <hr>
+        <div class="resume-item">
+            <h2 class="resume-item-title">BSCSE</h2>
+                <h3 class="resume-item-institute">United International University / 2019-2023</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+        </div>
+       </div>
+       <div class="resume-column">
+        <h3 class="resume-column-title">My Experience</h3>
+        <div class="resume-item">
+            <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+        </div>
+        <hr>
+            <h2 class="resume-item-title">Jr. Font End Developer</h2>
+                <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+        </div>
+        <hr>
+            <h2 class="resume-item-title">HTML Developer</h2>
+                <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+        </div>
+       </div>
+    </div>
+    <div class="download-cv">
+        <button>Download cv</button>
+    </div>
+</section>
+
+
         </main>
         <footer>
 
