--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
        </div>
        <div class="footer-column">
         <h3 class="section-title"></h3>
+        <form class="contact" action="">
+            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="Your Email">
+            <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+            <input class="btn-primary" type="Submit" value="submit">
+        </form>
        </div>
         </footer>
     </header>
