--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;800&display=swap" rel="stylesheet">">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/9455754c6c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -25,8 +26,8 @@
             <h3 class="banner-greeting"> Hi, I am</h3>
             <h1 class="banner-title">Abdullah</h1>
             <p class="banner description">My name is Abdullah.Iam a student of CSE in united <br> international university</p>
-         <button class="btn-primary">Download CV</button>  
-         <button class="btn-primary">Contact</button>          
+         <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>  
+         <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>          
         </div>
         <img class="profile-picture" src="images/abdullah.jpg" alt="">
     </div>
@@ -146,7 +147,7 @@
        </div>
     </div>
     <div class="download-cv">
-        <button>Download cv</button>
+        <button><i class="fa-solid fa-download"></i> Download cv</button>
     </div>
 </section>
 
